--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURURBRAHMA_SERVICES }}"
           channelId: live
-          projectId: gururbrahma-services
+          projectId: studio-5159116962-cf239
