--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,3 +27,5 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURURBRAHMA_SERVICES }}"
           channelId: live
           projectId: studio-5159116962-cf239
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
