--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy to Firebase Hosting on Push to Main
 "on":
   push:
@@ -7,7 +6,6 @@ name: Deploy to Firebase Hosting on Push to Main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    # These permissions are required by the 'firebase-hosting-deploy' action
     permissions:
       contents: read
       pull-requests: write
@@ -17,10 +15,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      
-      - run: npm i -g firebase-tools
+          cache: "npm" # Optional: Makes builds faster by caching dependencies
 
-      # The deploy action also needs credentials to act on your behalf
+      # ✅ THIS IS THE FIX: Install dependencies so 'next' exists
+      - run: npm ci
+
+      # You can remove 'npm i -g firebase-tools' (the action below includes it)
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
@@ -28,11 +29,7 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURURBRAHMA_SERVICES }}
           channelId: live
         env:
-          # This experimental flag is needed for Next.js support
           FIREBASE_CLI_EXPERIMENTS: webframeworks
-          # These env vars are needed for the build step (server-side rendering)
           FB_PROJECT_ID: ${{ secrets.FB_PROJECT_ID }}
           FB_CLIENT_EMAIL: ${{ secrets.FB_CLIENT_EMAIL }}
           FB_PRIVATE_KEY: ${{ secrets.FB_PRIVATE_KEY }}
-
-    
