Add Tiptap rich text editor and supporting components
Introduced a new rich text editor using Tiptap, including new components for image and document uploading, and a carousel. Updated dashboard and post management to support rich text content. Added necessary Tiptap and ProseMirror dependencies.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase Hosting on Push to Main
 "on":
   push:
     branches:
-      - main
+      - main # STRICT: Only deploys when code is pushed/merged to main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
