--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+studio-5159116962-cf239-firebase-adminsdk-fbsvc-83818603e0.json
