--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -15,3 +15,19 @@ runConfig:
       secret: FB_CLIENT_EMAIL
     - variable: FB_PRIVATE_KEY
       secret: FB_PRIVATE_KEY
+    - variable: FB_AUTH_DOMAIN
+      secret: FB_AUTH_DOMAIN
+    - variable: RESEND_API_KEY
+      secret: RESEND_API_KEY
+    - variable: GEMINI_API_KEY
+      secret: GEMINI_API_KEY
+    - variable: NEXT_PUBLIC_FIREBASE_API_KEY
+      secret: NEXT_PUBLIC_FIREBASE_API_KEY
+    - variable: NEXT_PUBLIC_FIREBASE_APP_ID
+      secret: NEXT_PUBLIC_FIREBASE_APP_ID
+    - variable: NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID
+      secret: NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID
+    - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+      secret: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+    - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+      secret: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
