--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -31,3 +31,7 @@ runConfig:
       secret: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
     - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
       secret: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+    - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
+      secret: FB_PROJECT_ID
+    - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+      secret: FB_AUTH_DOMAIN
